2006-10-24: Jason Long <jlong@messiah.edu>
 * t/signer_policy.t, t/signer.t: use new() instead of new_object()
 * lib/Mail/DKIM/Algorithm/Base.pm: allow debugging body canonicalization
 * lib/Mail/DKIM/MessageParser.pm: removed problematic check for
   "control characters"
 * scripts/dkimsign.pl: document --type argument; replace signer policy class
   with signer policy subroutine

2006-10-23: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: bugfix - signatures weren't setup correctly when
   policy built the signature
 * lib/Mail/DKIM/Signature.pm: bugfix - empty headerlist should return empty
   list
 * lib/Mail/DKIM/Canonicalization/Base.pm: moved support for Debug_Canonicalization
   here from Algorithm/*
 * lib/Mail/DKIM/Algorithm/Base.pm: removed Debug_Canonicalization support
 * lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm: removed Debug_Canonicalization support

2006-10-23: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm, lib/Mail/DKIM/Verifier.pm: use new() instead of
   new_object(); new_object() still supported; documented
   Debug_Canonicalization option

2006-10-20: Jason Long <jlong@messiah.edu>
 * t/signer_policy.t: added test for creating DomainKeys signature;
   added test for creating multiple signatures
 * lib/Mail/DKIM/SigningFilter.pm: removed (obsolete)
 * scripts/test_signing_filter.pl: removed (obsolete)
 * lib/Mail/DKIM/Signer.pm: added signatures method

2006-10-20: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM.pm, lib/Mail/DKIM/Signer.pm, lib/Mail/DKIM/Verifier.pm:
   various documentation fixes
 * lib/Mail/DKIM/Verifier.pm: set signature property when result is determined
 * lib/Mail/DKIM/Signer.pm: support addition of multiple signatures;
   changed default canonicalization method to "relaxed"

2006-10-20: Jason Long <jlong@messiah.edu>
 * t/signer_policy.t: tests different forms of signing policies
 * lib/Mail/DKIM/Signer.pm: support code references as a signing policy;